--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,17 @@
 {
   "name": "QuickNotes",
   "short_name": "QuickNotes",
-  "description": "A beautiful notes app to organize your thoughts",
-  "start_url": "/",
+  "description": "Your personal notes app",
+  "start_url": "/Quick-Notes/",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#2c3e50",
   "theme_color": "#3498db",
   "orientation": "any",
   "icons": [
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📝</text></svg>",
-      "sizes": "192x192",
-      "type": "image/svg+xml"
+      "src": "https://cdn.jsdelivr.net/npm/emoji-datasource-apple/img/apple/64/1f4dd.png",
+      "sizes": "64x64",
+      "type": "image/png"
     }
   ]
 }
